{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 286,
  "lineage": "ac064afa-aadb-7a0d-0e02-8f76ce24a45d",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:security-group/sg-0631ae54bf605201e",
            "description": "Security group which is to allow SSH from Bastion",
            "filter": null,
            "id": "sg-0631ae54bf605201e",
            "name": "ssh-sg-20200112060825258300000006",
            "tags": {
              "Name": "ssh-sg"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:security-group/sg-007a47fc8ffd7a5a4",
            "description": "EKS node security groups",
            "filter": null,
            "id": "sg-007a47fc8ffd7a5a4",
            "name": "cluster-sg-20200112060825258300000008",
            "tags": {
              "Name": "cluster-sg",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:security-group/sg-0b8daa9029c658d1f",
            "description": "EKS node security groups",
            "filter": null,
            "id": "sg-0b8daa9029c658d1f",
            "name": "node-sg-20200112060825258300000007",
            "tags": {
              "Name": "node-sg",
              "kubernetes.io/cluster/my-cluster": "owned",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:vpc/vpc-078c29fedcea3f071",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d205ef2abecffc92",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-88cd96ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-078c29fedcea3f071",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bffa441a82fd709",
            "owner_id": "060948813048",
            "state": "available",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-038082b8b2f5c63d6",
            "domain": "vpc",
            "id": "eipalloc-0c0b16be60ed16bb6",
            "network_interface": "eni-0463905be641605e7",
            "private_dns": "ip-10-0-130-214.eu-west-1.compute.internal",
            "private_ip": "10.0.130.214",
            "public_dns": "ec2-52-17-8-59.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.8.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0df7a9f153cdb3c11",
            "domain": "vpc",
            "id": "eipalloc-0c3aa578612a28772",
            "network_interface": "eni-0cd16bb0751f43079",
            "private_dns": "ip-10-0-157-48.eu-west-1.compute.internal",
            "private_ip": "10.0.157.48",
            "public_dns": "ec2-34-249-121-233.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.121.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08794f511a05c18dc",
            "domain": "vpc",
            "id": "eipalloc-0e74a5d52a0651bab",
            "network_interface": "eni-02ce4b6d12e941622",
            "private_dns": "ip-10-0-163-208.eu-west-1.compute.internal",
            "private_ip": "10.0.163.208",
            "public_dns": "ec2-63-35-79-162.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.79.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0007e7556eb33166e",
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0b16be60ed16bb6",
            "id": "nat-0e6c5a88400a2a428",
            "network_interface_id": "eni-0463905be641605e7",
            "private_ip": "10.0.130.214",
            "public_ip": "52.17.8.59",
            "subnet_id": "subnet-0024412d4906323fd",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            }
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3aa578612a28772",
            "id": "nat-0e4f69ae021563acd",
            "network_interface_id": "eni-0cd16bb0751f43079",
            "private_ip": "10.0.157.48",
            "public_ip": "34.249.121.233",
            "subnet_id": "subnet-0c804e5973013f42f",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            }
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74a5d52a0651bab",
            "id": "nat-0ceef6444c5ae3e80",
            "network_interface_id": "eni-02ce4b6d12e941622",
            "private_ip": "10.0.163.208",
            "public_ip": "63.35.79.162",
            "subnet_id": "subnet-0f4289557786fe922",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            }
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e6d594a510eb88821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e6c5a88400a2a428",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6d594a510eb8882",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0016657a11b8132b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e4f69ae021563acd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0016657a11b8132b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-047af001d6227f0141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0ceef6444c5ae3e80",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-047af001d6227f014",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0007e7556eb33166e",
            "id": "r-rtb-0310cbb3ac47b08ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0310cbb3ac47b08ea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e6d594a510eb8882",
            "owner_id": "060948813048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e6c5a88400a2a428",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0016657a11b8132b3",
            "owner_id": "060948813048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e4f69ae021563acd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-047af001d6227f014",
            "owner_id": "060948813048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ceef6444c5ae3e80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0310cbb3ac47b08ea",
            "owner_id": "060948813048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0007e7556eb33166e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bde9e9a03bd840e1",
            "route_table_id": "rtb-0e6d594a510eb8882",
            "subnet_id": "subnet-01ac527a2fa7cb593"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008840e92732ec5b0",
            "route_table_id": "rtb-0016657a11b8132b3",
            "subnet_id": "subnet-019ff8f01b567fdfd"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011cec2bc260f0d89",
            "route_table_id": "rtb-047af001d6227f014",
            "subnet_id": "subnet-0dab626f3fd6441d9"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.database",
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.database",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052c6c7353ceea32d",
            "route_table_id": "rtb-0e6d594a510eb8882",
            "subnet_id": "subnet-0e299d7e09c50065f"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0485a58fd24ac9d01",
            "route_table_id": "rtb-0016657a11b8132b3",
            "subnet_id": "subnet-0c696af793062237a"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcb1a02d7df75e79",
            "route_table_id": "rtb-047af001d6227f014",
            "subnet_id": "subnet-0baea8eb7f5d37d5d"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc509087af52e4e6",
            "route_table_id": "rtb-0310cbb3ac47b08ea",
            "subnet_id": "subnet-0024412d4906323fd"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047e0c0be607e4952",
            "route_table_id": "rtb-0310cbb3ac47b08ea",
            "subnet_id": "subnet-0c804e5973013f42f"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041f9c969e4f356e6",
            "route_table_id": "rtb-0310cbb3ac47b08ea",
            "subnet_id": "subnet-0f4289557786fe922"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:security-group/sg-007a47fc8ffd7a5a4",
            "description": "EKS node security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007a47fc8ffd7a5a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8daa9029c658d1f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cluster-sg-20200112060825258300000008",
            "name_prefix": "cluster-sg-",
            "owner_id": "060948813048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-sg",
              "sre_candidate": "tochukwu.nwoko"
            },
            "timeouts": null,
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:security-group/sg-0631ae54bf605201e",
            "description": "Security group which is to allow SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0631ae54bf605201e",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.210.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg-20200112060825258300000006",
            "name_prefix": "ssh-sg-",
            "owner_id": "060948813048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:security-group/sg-0b8daa9029c658d1f",
            "description": "EKS node security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8daa9029c658d1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04800dbc0c5d8796f"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Accept traffic from load balancer security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0631ae54bf605201e"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS Control Plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-007a47fc8ffd7a5a4"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "node-sg-20200112060825258300000007",
            "name_prefix": "node-sg-",
            "owner_id": "060948813048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-sg",
              "kubernetes.io/cluster/my-cluster": "owned",
              "sre_candidate": "tochukwu.nwoko"
            },
            "timeouts": null,
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1926888594",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007a47fc8ffd7a5a4",
            "self": false,
            "source_security_group_id": "sg-0b8daa9029c658d1f",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow EKS Control Plane",
            "from_port": 1025,
            "id": "sgrule-1347056000",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b8daa9029c658d1f",
            "self": false,
            "source_security_group_id": "sg-007a47fc8ffd7a5a4",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4218848157",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-007a47fc8ffd7a5a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2690509875",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0631ae54bf605201e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.module.ssh_sg.aws_security_group.this",
            "module.eks.module.eks.module.ssh_sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-119105634",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b8daa9029c658d1f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2528437763",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007a47fc8ffd7a5a4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this",
            "module.eks.module.eks.module.cluster-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "197.210.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3293656357",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0631ae54bf605201e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.module.ssh_sg.aws_security_group.this",
            "module.eks.module.eks.module.ssh_sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-2101745647",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b8daa9029c658d1f",
            "self": true,
            "source_security_group_id": "sg-0b8daa9029c658d1f",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.cluster-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks.module.node-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": []
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-bastian",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Accept traffic from load balancer security group",
            "from_port": 0,
            "id": "sgrule-3307149581",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b8daa9029c658d1f",
            "self": false,
            "source_security_group_id": "sg-0631ae54bf605201e",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.module.eks.module.node-sg.aws_security_group.this",
            "module.eks.module.eks.module.node-sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.ssh_sg.aws_security_group.this",
            "module.eks.module.eks.module.ssh_sg.aws_security_group.this_name_prefix",
            "module.eks.module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-01ac527a2fa7cb593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.192.0/21",
            "id": "subnet-01ac527a2fa7cb593",
            "map_public_ip_on_launch": false,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-db",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-019ff8f01b567fdfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.200.0/21",
            "id": "subnet-019ff8f01b567fdfd",
            "map_public_ip_on_launch": false,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-db",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0dab626f3fd6441d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.208.0/21",
            "id": "subnet-0dab626f3fd6441d9",
            "map_public_ip_on_launch": false,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-db",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0e299d7e09c50065f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0e299d7e09c50065f",
            "map_public_ip_on_launch": false,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-private",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0c696af793062237a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0c696af793062237a",
            "map_public_ip_on_launch": false,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-private",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0baea8eb7f5d37d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0baea8eb7f5d37d5d",
            "map_public_ip_on_launch": false,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-private",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0024412d4906323fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.128.0/20",
            "id": "subnet-0024412d4906323fd",
            "map_public_ip_on_launch": true,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-public",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0c804e5973013f42f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-0c804e5973013f42f",
            "map_public_ip_on_launch": true,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-public",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:subnet/subnet-0f4289557786fe922",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-0f4289557786fe922",
            "map_public_ip_on_launch": true,
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-eks-public",
              "kubernetes.io/cluster/my-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "sre_candidate": "tochukwu.nwoko"
            },
            "vpc_id": "vpc-078c29fedcea3f071"
          },
          "dependencies": [
            "module.eks.module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:060948813048:vpc/vpc-078c29fedcea3f071",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069f10be7ed798fcb",
            "default_route_table_id": "rtb-02bffa441a82fd709",
            "default_security_group_id": "sg-00330d4c41784322e",
            "dhcp_options_id": "dopt-88cd96ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-078c29fedcea3f071",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02bffa441a82fd709",
            "owner_id": "060948813048",
            "tags": {
              "Name": "my-cluster-vpc",
              "kubernetes.io/cluster/my-cluster": "shared",
              "sre_candidate": "tochukwu.nwoko"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    },
    {
      "module": "module.eks.module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "module.eks.module.eks.provider.aws"
    }
  ]
}